<?xml version="1.0"?>
<package format="2">
  <name>tortoisebot_waypoints</name>
  <version>0.0.0</version>
  <description>The tortoisebot_waypoints package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>

  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <build_depend>rostest</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>rosunit</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
